cabal-version: 2.2
name:          sa
version:       0
synopsis:      Simulated Annealing
description:
  Simulated Annealing...

category:      Algorithms
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
author:        Oleg.Grenrus <oleg.grenrus@iki.fi>
license:       GPL-2.0-or-later
license-file:  LICENSE

source-repository head
  type:     git
  location: https://github.com/phadej/sa.git

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src
  exposed-modules:
    SA
    SA.Example.SplitMix16
    SA.Example.Ramp
    SA.Example.FinnishRandonneur

  -- GHC boot libraries
  build-depends:
    , base          ^>=4.12
    , containers    ^>=0.6.0.1
    , deepseq       ^>=1.4.4.0
    , transformers  ^>=0.5.6.1

  build-depends:
    , splitmix
    , vector

test-suite sa-example
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall -rtsopts -threaded
  hs-source-dirs:   example
  main-is:          Main.hs
  build-depends:
    , base
    , containers
    , sa
